--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 title      : Effortless Metrics
 email      : your-email@example.com #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : Your Name
+description: "Effortless Metrics' Website"
+author     : Effortless Metrics
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
